# mcptests

./: .gitignore  README.md  pyproject.toml
docs/: README.md  config.yaml  slides.md
server/: simplemath.py  weather.py
src/chainlit/: chainlit_langchain_app.py  chainlit_openai_app.py
src/chainlit/.chainlit/: config.toml
src/client/: ollama_c3se_client.py  ollama_weather_client.py  vllm_weather_client.py
src/server/: c3se.py
